[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "varbert"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]
license = {text = "BSD 2 Clause"}
description = "The VarBERT API for renaming variables in decompiled code."
urls = {Homepage = "https://github.com/binsync/varbert_api"}
requires-python = ">= 3.8"
dependencies = [
    "torch",
    "transformers",
    "tqdm",
    "dailalib",
    "libbs"
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
varbert = "varbert.__main__:main"

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.dynamic]
version = {attr = "varbert.__version__"}

