[metadata]
name = varmodel
version = attr: varmodel.__version__
url = https://github.com/binsync/varmodel
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
license = BSD 2 Clause
license_files = LICENSE
description = The Variable Annotation Recommendation Model
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    torch
    transformers
    tqdm
    yodalib>=0.2.0

python_requires = >= 3.6
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
    varmodel = varmodel.__main__:main
