[metadata]
name = varbert
version = attr: varbert.__version__
url = https://github.com/binsync/varbert_api
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
license = BSD 2 Clause
license_files = LICENSE
description = The VarBERT API for renaming variables in decompiled code.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    torch
    transformers
    tqdm
    dailalib
    libbs>=1.18.0

python_requires = >= 3.8
packages = find:

[options.entry_points]
console_scripts =
    varbert = varbert.__main__:main
